Generalizing to a 2D Canvas. Renamed to Canvas2D and Polygon widgets

--- a/CarSim.kv
+++ b/CarSim.kv
@@ -7,12 +7,12 @@
 		Line:
 			points: (1, 1, 1, 100)
 
-<Car>:
+<Polygon>:
 	canvas:
 		Color:
 			rgba: (0, 1, 1, 1)
 		Line:
 			points: self.view_points
 	
-FloatLayout:
+Canvas2D:
     Axis:
