Points is a generic class that simply transforms them, so that we can create subclasses of different primitives using them

--- a/CarSim.kv
+++ b/CarSim.kv
@@ -1,18 +1,9 @@
-<Axis@Polygon>:
+<Test@Widget>:
 	canvas:
 		Color:
-			rgba: (1, 0, 0, 1)
+			rgba: (1, 0, 1, 1)
 		Line:
-			points: (1, 1, 100, 1)
-		Line:
-			points: (1, 1, 1, 100)
-
-<Polygon>:
-	canvas:
-		Color:
-			rgba: (0, 1, 1, 1)
-		Line:
-			points: self.view_points
+			points: (25.535506873199026, 38.85297857547701, 37.994084002866366, 25.861294469706511, 66.864493126800809, 53.547021424522825, 37.994084002866366, 25.861294469706511)
 	
 Canvas2D:
-    Axis:
+    Test:
