Renamed classes to avoid clashes with KV language. Supports adding widgets in kv language now
Signed-off-by: Juan Toledo <toledo+github@lazaro.es>

--- a/CarSim.kv
+++ b/CarSim.kv
@@ -1,9 +1,10 @@
-<Test@Widget>:
-	canvas:
-		Color:
-			rgba: (1, 0, 1, 1)
-		Line:
-			points: (25.535506873199026, 38.85297857547701, 37.994084002866366, 25.861294469706511, 66.864493126800809, 53.547021424522825, 37.994084002866366, 25.861294469706511)
-	
+<Axis@Widget2D>:
+	coords: (100, 100)
+	Line2D:
+		points: (1, 1, 100, 1)
+	Line2D:
+		points: (1, 1, 1, 100)
+
 Canvas2D:
-    Test:
+	Axis:
+
