Added Arcs to Canvas2D and draws the whole turning circle for a steering angle

--- a/CarSim.kv
+++ b/CarSim.kv
@@ -16,6 +16,8 @@
 	size: (self.t_width / 1000, self.t_height / 1000)
 	rotation: - (self.angle % 360) * math.pi / 180
 
+<TurnCircle>:
+	id: turn_circle
 
 <Car>:
 	coords: (5, 5)
