--- a/CarSim.kv
+++ b/CarSim.kv
@@ -28,6 +28,7 @@
 	track: 1.437
 	wheel_to_front: .787
 	tire: "175/65R14"
+	curb_turning_circle: 10
 
 	Rectangle2D:
 		id: body
@@ -60,6 +61,7 @@
 	track: 1.232
 	wheel_to_front: 0.313
 	tire: "125/80R13"
+	curb_turning_circle: 7
 
 Canvas2D:
 	scale: 40
