check_max_steer_angle tries to verify that the calculation has been done correctly. It has improved, but I still don't understand why it's not perfect

--- a/CarSim.kv
+++ b/CarSim.kv
@@ -47,7 +47,7 @@
 		id: lbw
 		coords: (-self.parent.track/2, self.parent.length/2 - self.parent.wheel_to_front - self.parent.wheelbase)
 	Wheel:
-		id: lfw
+		id: lbw
 		coords: (self.parent.track/2, self.parent.length/2 - self.parent.wheel_to_front - self.parent.wheelbase)
 
 <Peugeot1007@Car>:
