--- a/CarSim.kv
+++ b/CarSim.kv
@@ -17,6 +17,15 @@
 <TurnCircle>:
 	id: turn_circle
 
+<BackingLines>
+	center: self.parent.turning_circle.coords
+	r1: center[0] - self.parent.width
+	r2: center[0] + self.parent.width
+	Arc2D:
+		circle: (*center, r1)
+	Arc2D
+		circle: (*center, r2)
+
 <Car>:
 	coords: (5, 5)
 
@@ -63,10 +72,19 @@
 	tire: "125/80R13"
 	curb_turning_circle: 7
 
+<Plaza1007@Widget2D>:
+	Line2D:
+		points: (0, 0, 2.55, 0, 2.55, 5.655, 2.405, 5.655, 2.405, 5.8)
+
 Canvas2D:
 	scale: 40
 	coords: (100, 100)
 	Axis:
 	Twizy:
 		coords: (8, 5)
+	Plaza1007:
+	Plaza1007:
+		coords: (2.55, 0)
+	Peugeot1007:
+		coords: (4,2)
 
