First data for the model 3

--- a/CarSim.kv
+++ b/CarSim.kv
@@ -72,6 +72,13 @@
 	tire: "125/80R13"
 	curb_turning_circle: 7
 
+<Model3@Car>:
+	id: Model3
+	length: 4.69
+	width: 1.88
+	wheelbase: 2.87
+	track: 
+
 <Plaza1007@Widget2D>:
 	Line2D:
 		points: (0, 0, 2.55, 0, 2.55, 5.655, 2.405, 5.655, 2.405, 5.8)
