--- a/carsim.kv
+++ b/carsim.kv
@@ -19,13 +19,21 @@
 
 <BackingLines>
 	center: (0, 0)
-	parent_width: 0
-	r1: self.center[0] - self.parent_width/2
-	r2: self.center[0] + self.parent_width/2
+	r1: 0
+	r2: 0
+	r3: 0
+	r4: 0
+	r5: 0
 	Arc2D:
 		circle: (*self.parent.center, self.parent.r1)
-	Arc2D
+	Arc2D:
 		circle: (*self.parent.center, self.parent.r2)
+	Arc2D:
+		circle: (*self.parent.center, self.parent.r3)
+	Arc2D:
+		circle: (*self.parent.center, self.parent.r4)
+	Arc2D:
+		circle: (*self.parent.center, self.parent.r4)
 
 <Car>:
 	coords: (5, 5)
