Añadido imagen y datos de C3 aircross

--- a/carsim.kv
+++ b/carsim.kv
@@ -102,6 +102,16 @@
 	tire: "245/45R19"
 	curb_turning_circle: 11  # Estimado
 
+<C3@Car>:
+	id: C3
+	length: 4.154
+	width: 1.976
+	wheelbase: 2.604
+	track: 1.491
+	tire: "205/60R16"
+	curb_turning_circle: 10.8
+	source: "C3-Aircross.png"
+
 <Garaje@Rectangle2D>:
 	size: (21.64, 30.65)
 	source: "Garaje.png"
@@ -122,6 +132,6 @@ Canvas2D:
 		coords: (8, 5)
 	Peugeot1007:
 		coords: (4, 2.3)
-	Model3:
+	C3:
 		coords: (6.55, 2.3)
 
