Añadido Kadjar y ajustado el voladizo delantero del C3

--- a/carsim.kv
+++ b/carsim.kv
@@ -109,8 +109,20 @@
 	wheelbase: 2.604
 	track: 1.491
 	tire: "205/60R16"
+	wheel_to_front: .842
 	curb_turning_circle: 10.8
 	source: "C3-Aircross.png"
+
+<Kadjar@Car>:
+	id: Kadjar
+	length: 4.359
+	width: 2.058
+	wheelbase: 2.646
+	track: 1.549
+	tire: "215/65R16"
+	wheel_to_front: .897
+	curb_turning_circle: 10.72
+	source: "Kadjar.png"
 
 <Garaje@Rectangle2D>:
 	size: (21.64, 30.65)
@@ -130,8 +142,8 @@ Canvas2D:
 	Axis:
 	Twizy:
 		coords: (8, 5)
-	Peugeot1007:
-		coords: (4, 2.3)
 	C3:
 		coords: (6.55, 2.3)
+	Kadjar:
+		coords: (9, 2.3)
 
