No default car Cars appear inside proper parking spots

--- a/carsim.kv
+++ b/carsim.kv
@@ -141,9 +141,11 @@ Canvas2D:
 		coords: (6.81, 0)
 	Axis:
 	Twizy:
-		coords: (8, 5)
+		coords: (2.9, 2.8)
 	C3:
-		coords: (6.55, 2.3)
+		coords: (5.55, 2.8)
 	Kadjar:
-		coords: (9, 2.3)
+		coords: (8.1, 2.8)
+	Peugeot1007:
+		coords: (10.7, 2.8)
 
